--- a/css/main-style.css
+++ b/css/main-style.css
@@ -101,7 +101,7 @@ nav, .menu{
     top: 25px;
     right: 25px;
     font-size: 30px;
-    color: #ccc;
+    color: #222;
     z-index: 5;
     cursor: pointer;
 }
